gigwalk-html/css/core.css
/* ... */
@media (max-width: 350px) {
	
	.ticket-instructions {
		padding-right: .5em;
		padding-left: .5em;
	}
	
	.Ticket .instruction .widget-panel-content > .inner {
		padding-left: 1.2em;
	}

	.Ticket .instruction.barcode .wrapper a, 
	.Ticket .instruction.task .type.barcode .wrapper a, 
	.Ticket .barcode .manual-entry {
		margin: 1em 1em 0 0;
	}
	
	.Ticket .barcode .added .upc .plainLabel {
		display: none;
	}
	
	.Ticket .barcode .manual-entry input {
		width: 170px;
	}
	
	.Ticket .barcode .wrapper .manual-entry a,
	.Ticket .instruction.task .type.barcode .wrapper .manual-entry a {
		width: 82px;
	}
	
	.hint.widget-panel .widget-panel-content div.attachment.file {
		padding-left: .7em; 
	}
	
}


/* Profile */

.Profile .user-image {
	margin-right: 1em;
}

.Profile .section-controls {
	margin-top: 1.2em;
} 

.Profile .change-picture {
	margin: .8em 0 0 -4px;
}

.Profile .section-actions .button-holder {
	margin-left: 4px;
	width: 200px;
}

.Profile .section-actions .button-holder a {
	font-size: 16px;
	text-align: center;
	margin-right: 0;
	margin-bottom: 1px;
	padding: .7em 1.5em;
	display: inline-block;
	width: 100%;
}

.Profile .user-details {
	font-size: 17px;
}

.Profile .user-org {
	margin-right: 1.5em;
}

.Profile .user-activity,
.Profile .user-details .inner {
	margin-top: .5em;
}

.Profile .subcontent.primary  {
	max-width: 700px;
}

.Profile .widget-panel .header {
	margin-bottom: 1em;
	padding: 2px 0 1px 0;
}

.Profile .widget-panel .header .ti {
	padding-left: 1.8em;
}

.Profile .widget-panel .header .ti .im.icon-settings:before {
	font-size: 40px;
}

.Profile .widget-panel .header .ti .im.icon-lock:before {
	font-size: 44px;
}

.Profile .widget-panel .header .ti .im.icon-time:before {
	font-size: 46px;
}

.tab.action.messages {
	margin: -.5em 0 .5em 0;
}

.Profile .tab-pane.account .primary.actions {
	padding-top: 1em;
}

.Profile .primary.actions .right {
	margin-right: 0;
}

.Profile .widget-panel-content {
	padding-bottom: 2em;
}

.Profile .widget-panel-content .section {
	margin-bottom: 1.5em;
}

.Profile .account .widget-panel-content .section {
	padding-right: 1.5em;
	width: 50%;
}

.Profile .widget-panel-content .plainLabel {
	margin-bottom: -2px;
}

.Profile .account .widget-panel-content .section input {
	margin-bottom: 5px;
}

.Profile .section.address input.state {
	margin-right: 1em;
	width: 60px;
}

.Profile .section.address input.zip,
.Profile .widget-panel-content .section.hours input[type="text"] {
	width: 105px;
}

.Profile .password .section .hint {
	font-size: 14px;
	text-align: right;
	margin: -3px 0 8px 0;
}

.Profile .social .hint {
	margin-bottom: 1em;
}

.Profile .social .holder  {
	padding-left: 38px;
}

.Profile .scheduling .section.days .plainLabel {
	margin: 0 0 .5em .3em;
}

.Profile h1 {
	font-size: 22px;
	margin-top: .5em;
}

.Profile .personal-info .section.name,
.Profile .personal-info .section.contact:not(.static),
.Profile .personal-info .section.address,
.Profile .password .section {
	padding-left: 10px;
}

.Profile .social.static .im {
	margin-right: 5px;
}

.Profile .summary table {
	margin-top: 2em;
}

.Profile .filters-holder {
	padding-top: 0;
}

.Profile .filter.dates {
	margin-right: 0;
}

.Profile .choose-dates {
	min-width: 330px;
}

.Profile td.tickets {
	font-size: 22px;
}

.Profile td.number {
	font-size: 26px;
}

.Profile table td.hours {
	padding-right: 15px;
}

.Profile .groups th.ownership {
	width: 135px;
}

.Profile .certifications .section {
	margin-left: 1em;
}

.Profile .cert {
	margin: .5em 2em .2em 1.8em;
}

/* Resources temporary fix */

.Resources .filters {
	margin: 1em 0;
}

/* integrate Projects Dash */

.Projects .dash .table-list th:nth-child(1) input[type="checkbox"] {
	top: -9px;
}

.Projects .dash .table-list td:nth-child(1) input[type="checkbox"] {
	top: -10px;
}

.Projects .dash .table-list :nth-child(1) input[type="checkbox"] {
	left: 4px;
}

.Projects .dash .table-list th:nth-child(2) { /* project name */
	min-width: 175px;
	max-width: 365px;
}

.Projects .dash .table-list th:nth-child(3),
.Projects .dash .table-list th:nth-child(4) { /* progress bars th's */
	min-width: 115px;
}

.Projects .dash .table-list th:nth-child(5) { /* hours left th */
	min-width: 120px;
}

.Projects .dash .table-list td:nth-child(5) { /* hours left td */
	text-align: right;
	padding-right: 55px;
}

.Projects .dash .table-list th:nth-child(6),
.Projects .dash .table-list th:nth-child(7) { /* dates th's */
	min-width: 75px;
}

.Projects .dash .table-list td:nth-child(6),
.Projects .dash .table-list td:nth-child(7) { /* dates td's */
	padding-right: 20px;
	text-align: right;
}

.Projects .dash .table-list th:nth-child(8) { /* locations th */
	min-width: 115px;
}

.Projects .dash .table-list td:nth-child(8) { /* locations td */
	padding-right: 36px;
	text-align: right;
}

.Projects .dash .table-list th:nth-child(9) { /* status */
	min-width: 95px;
}

.Projects .dash .table-list td .completion-bar .text {
	text-align: right;
	width: 55px;
}

.Projects .dash .table-list td .completion-bar .text {
	line-height: 1.3em;
}

.Projects .dash .table-list td .completion-bar .percent-complete {
	height: 1.33em;
}



/* when progress bars pop in on Projects Dash */

@media (max-width: 1510px) {

	.Projects .dash .table-list td .completion-bar,
	.Projects .dash .table-list td .text { /* progress bars text */
		text-align: center;
		display: inline-block;
		width: 100%;
	}

	.Projects .dash .table-list td .percent-text { /* progress bars text */
		padding-right: 15px;
	}


	.Projects .dash .table-list td .completion-bar {
		border: 0px solid #ffffff;
	}
	
	.Projects .dash .table-list td .completion-bar .completion {
		display: none;
	}
	
	.Projects .dash .table-list td .completion-bar,
	.Projects .dash .table-list td .completion-bar .text {
		color: #333;
		line-height: 1.2em;
		width: auto;
		background: transparent;
	}

}
/* ... */

